Add back in instrumentation runner line
Took it out but it was indeed required for `adb shell am instrument` to
run correctly.

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -27,6 +27,7 @@ android {
         targetSdkVersion 19
 
         testPackageName "com.expedia.bookings.debug.test"
+        testInstrumentationRunner "com.zutubi.android.junitreport.JUnitReportTestRunner"
     }
 
     productFlavors {
