--- a/project/proguard.cfg
+++ b/project/proguard.cfg
@@ -95,3 +95,9 @@
 	java.lang.Object writeReplace();
 	java.lang.Object readResolve();
 }
+
+# Keep Otto methods
+-keepclassmembers class ** {
+	@com.squareup.otto.Subscribe public *;
+	@com.squareup.otto.Produce public *;
+}
