2265: Intercept e.xpda.co links
Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D55

--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -105,6 +105,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
+                <data android:scheme="http" />
+                <data android:host="e.xpda.co" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="expda" />
                 <data android:host="home" />
                 <data android:host="trips" />
