--- a/project/build.gradle
+++ b/project/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile project(':lib:ShareEverywhere:shareeverywhere')
 
     instrumentTestCompile fileTree('tests/libs').include('*.jar')
+    instrumentTestCompile fileTree('../lib/TestUtils/project/libs/robotium-solo-5.0.1.jar')
 }
 
 android {
