--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,4 @@ include ':lib:FlightLib'
 include ':lib:Utils'
 include ':lib:Jars'
 include ':lib:ShareEverywhere:shareeverywhere'
+include ':lib:AndroidTime'
