--- a/project/project.properties
+++ b/project/project.properties
@@ -8,7 +8,7 @@
 # project structure.
 
 # Project target.
-target=Google Inc.:Google APIs:18
+target=Google Inc.:Google APIs:19
 proguard.config=proguard.cfg
 android.library.reference.1=../lib/ActionBarSherlock/actionbarsherlock
 android.library.reference.2=../lib/FacebookSdk/facebook
@@ -17,3 +17,4 @@ android.library.reference.4=../lib/google-play-services
 android.library.reference.5=../lib/svg-android/svgandroid
 android.library.reference.6=../lib/Utils
 android.library.reference.7=../lib/ShareEverywhere/shareeverywhere
+android.library.reference.8=../lib/AndroidTime/library
