--- a/project/build.gradle
+++ b/project/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     compile project(':lib:AndroidTime')
 
     instrumentTestCompile fileTree('tests/libs').include('*.jar')
-    instrumentTestCompile fileTree('../lib/TestUtils/project/libs/robotium-solo-5.0.1.jar')
+    instrumentTestCompile fileTree('../lib/TestUtils/project/libs').include('*.jar')
 }
 
 android {
