Make GoogleInstrumentationTestRunner the default test runner.
We need it to run Espresso tests. It also runs Robotium/JUnit3 tests.
Should be fine.

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -31,7 +31,7 @@ android {
         buildConfigField "boolean", "IS_VSC", "false"
 
         testPackageName "com.expedia.bookings.debug.test"
-        testInstrumentationRunner "com.zutubi.android.junitreport.JUnitReportTestRunner"
+	testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
     }
 
     productFlavors {
