153 154: Handle deeplinking for Travelocity
Summary: Handle Travelocity shared urls and do not handle expedia urls
in the Travelocity build. Also currently adding both www.travelocity.com
and shop.travelocity.com.

Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D107

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -106,12 +106,17 @@ android {
         instrumentTest.manifest.srcFile 'tests/AndroidManifest.xml'
         instrumentTest.java.srcDirs = ['tests/src']
 
+        Expedia {
+            manifest.srcFile 'AndroidManifest-expedia.xml'
+        }
+
         VSC {
             manifest.srcFile 'AndroidManifest-vsc.xml'
             res.srcDirs 'res_vsc'
         }
 
         Travelocity {
+            manifest.srcFile 'AndroidManifest-travelocity.xml'
             res.srcDirs 'res_travelocity'
         }
 
