Further update build.gradle for automation purposes
Automation -> ExpediaAutomation
Set IS_TRAVELOCITY to true for Travelocity stuff

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -58,12 +58,15 @@ android {
             versionName "1.0"
         }
 
-        Automation {
+        ExpediaAutomation {
             packageName "com.expedia.bookings.auto"
         }
 
         TravelocityAutomation {
+            buildConfigField "boolean", "IS_TRAVELOCITY", "true"
             packageName "com.travelocity.android.auto"
+            versionCode 1
+            versionName "1.0"
         }
     }
 
