Set IS_EXPEDIA flag to be true for ExpediaAutomation build

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -59,6 +59,7 @@ android {
         }
 
         ExpediaAutomation {
+            buildConfigField "boolean", "IS_EXPEDIA", "true"
             packageName "com.expedia.bookings.auto"
         }
 
