Make sure automation projects use correct resources
They do not automatically inherit from the Expedia or Travelocity
flavors so we need to specify the source sets separately.

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -144,6 +144,15 @@ android {
             res.srcDirs 'res_travelocity'
         }
 
+        ExpediaAutomation {
+            manifest.srcFile 'AndroidManifest-expedia.xml'
+        }
+
+        TravelocityAutomation {
+            manifest.srcFile 'AndroidManifest-travelocity.xml'
+            res.srcDirs 'res_travelocity'
+        }
+
         signingConfigs {
             debug {
                 storeFile file("../common/debug.keystore")
