--- a/project/build.gradle
+++ b/project/build.gradle
@@ -27,7 +27,7 @@ android {
         targetSdkVersion 18
 
         testPackageName "com.expedia.bookings.debug.test"
-        testInstrumentationRunner "com.zutubi.android.junitreport.JUnitReportTestRunner"
+        testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
     }
 
     productFlavors {
@@ -96,8 +96,11 @@ android {
             assets.srcDirs = ['assets']
         }
 
-        instrumentTest.manifest.srcFile '../tests/AndroidManifest.xml'
-        instrumentTest.java.srcDirs = ['../tests/src']
+        instrumentTestExpediaAutomation {
+            manifest.srcFile '../tests/AndroidManifest.xml'
+            java.srcDirs = ['../tests/src']
+            res.srcDirs = ['../tests/res']
+        }   
 
         VSC {
             manifest.srcFile 'AndroidManifest-vsc.xml'
@@ -110,6 +113,5 @@ android {
             }
         }
     }
-
 }
 
