Update ui tests to be in line with what master has.
We probably should revert this before merging 3.6
into master. Tests live in a completely different place here,
anyway.

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     compile project(':lib:ShareEverywhere:shareeverywhere')
 
     instrumentTestCompile fileTree('../tests/libs').include('*.jar')
-    instrumentTestCompile fileTree('../lib/TestUtils/project/libs').include('espresso-1.1-bundled.jar')
+    instrumentTestCompile fileTree('../lib/TestUtils/project/libs').include('*.jar')
 }
 
 android {
