--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.expedia.bookings.test"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="7" />
+    package="com.expedia.bookings.test"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
+    <uses-sdk android:minSdkVersion="8" />
 
     <uses-permission android:name="android.permission.READ_LOGS" />
 
-    <instrumentation android:targetPackage="com.expedia.bookings" android:name="com.zutubi.android.junitreport.JUnitReportTestRunner" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <instrumentation
+        android:name="com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
+        android:targetPackage="com.expedia.bookings" />
 
-    <uses-library android:name="android.test.runner" />
-        <activity android:name=".FlightHappyPath"/>
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <uses-library android:name="android.test.runner" />
+
+        <activity android:name=".FlightHappyPath" />
     </application>
+
 </manifest>
