Add IS_VSC entry for ExpediaAutomation builds

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -46,6 +46,7 @@ android {
 
         ExpediaAutomation {
             packageName "com.expedia.bookings.auto"
+	    buildConfig "public static final boolean IS_VSC = false;"
         }
     }
 
