--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -45,7 +45,7 @@
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/launcher_name"
         android:theme="@style/Theme" >
 
         <!-- ActiveAndroid -->
