2822 tablet checkout line of business stickiness
WE want the lob that is being checked out to stick on rotation.

--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -283,7 +283,8 @@
             android:name="com.expedia.bookings.activity.TabletCheckoutActivity"
             android:label="@string/CheckOut"
             android:theme="@style/V2.Theme.Activity.TabletCheckout"
-            android:windowSoftInputMode="adjustPan" >
+            android:windowSoftInputMode="adjustPan"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
