--- a/project/build.gradle
+++ b/project/build.gradle
@@ -180,4 +180,8 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
