Update build tools and build plugin
Re-encode a jpg masquerading as a png. The new aapt didn't like it at
all.

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -28,6 +28,10 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
+    lintOptions {
+        checkReleaseBuilds false
+    }
+
     packagingOptions {
         exclude 'LICENSE.txt'
     }
