--- a/project/build.gradle
+++ b/project/build.gradle
@@ -8,7 +8,14 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
+    compile fileTree(dir: 'libs', include: [
+        'activeandroid-20131111.jar',
+        'admsAppLibrary-3.0.5.jar',
+        'adxtag2.4.5exp.jar',
+        'gcm.jar',
+        'jackson-core-asl-1.8.0.jar',
+        'otto-1.3.4.jar',
+    ])
     compile project(':lib:FacebookSdk:facebook')
     compile project(':lib:FlightLib')
     compile project(':lib:google-play-services')
@@ -16,6 +23,8 @@ dependencies {
     compile project(':lib:Utils')
     compile project(':lib:ShareEverywhere:shareeverywhere')
     compile project(':lib:AndroidTime')
+
+    compile 'com.squareup.okhttp:okhttp:2.0.0-RC1'
 
     androidTestCompile fileTree('../lib/TestUtils/project/libs').include(
         'robotium-solo-5.0.1.jar',
