--- a/project/build.gradle
+++ b/project/build.gradle
@@ -14,7 +14,6 @@ dependencies {
         'adxtag2.4.5exp.jar',
         'gcm.jar',
         'jackson-core-asl-1.8.0.jar',
-        'otto-1.3.4.jar',
     ])
     compile project(':lib:FacebookSdk:facebook')
     compile project(':lib:FlightLib')
@@ -25,6 +24,7 @@ dependencies {
     compile project(':lib:AndroidTime')
 
     compile 'com.squareup.okhttp:okhttp:2.0.0-RC1'
+    compile 'com.squareup:otto:1.3.4'
 
     androidTestCompile fileTree('../lib/TestUtils/project/libs').include(
         'robotium-solo-5.0.1.jar',
