--- a/project/build.gradle
+++ b/project/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 
     compile 'com.squareup.okhttp:okhttp:2.0.0-RC2'
     compile 'com.squareup:otto:1.3.4'
+    compile 'com.google.code.gson:gson:2.2.4'
 
     androidTestCompile fileTree('../lib/TestUtils/project/libs').include(
         'robotium-solo-5.0.1.jar',
