--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -289,6 +289,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name="com.expedia.bookings.invaders.InvaderActivity"
+            android:label="INVADERS"
+            android:launchMode="singleTop"/>
+
         <!-- Testing activities -->
 
         <activity
