changing versionCode, versionNo to 6.2 1003
Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D449

(cherry picked from commit c1221bf6800affabb7c4a177b46d0aba643bd712)

Conflicts:
	project/build.gradle

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -81,8 +81,8 @@ android {
             buildConfigField "boolean", "IS_TRAVELOCITY", "true"
             buildConfigField "String", "MEDIA_URL", "\"http://media.travelocitycustomercare.com\""
             packageName "com.travelocity.android"
-            versionCode 1
-            versionName "1.0"
+            versionCode 1003
+            versionName "6.2-${versionCode}"
         }
 
         AirAsiaGo {
