Add permission required for samsung gear

--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -35,6 +35,7 @@
     <uses-permission android:name="com.samsung.wmanager.APP"/>
     <uses-permission android:name="com.samsung.wmanager.ENABLE_NOTIFICATION"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="com.samsung.android.providers.context.permission.WRITE_USE_APP_FEATURE_SURVEY"/>
 
     <uses-feature
         android:glEsVersion="0x00020000"
