--- a/project/build.gradle
+++ b/project/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     compile project(':lib:ShareEverywhere:shareeverywhere')
     compile project(':lib:AndroidTime')
 
-    compile 'com.squareup.okhttp:okhttp:2.0.0-RC2'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup:otto:1.3.4'
     compile 'com.google.code.gson:gson:2.2.4'
 
