--- a/project/build.gradle
+++ b/project/build.gradle
@@ -11,7 +11,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: [
         'activeandroid-20131111.jar',
         'admsAppLibrary-3.0.5.jar',
-        'adxtag2.4.5exp.jar',
+        'adxtag3.1.5.jar',
     ])
     compile project(':lib:FacebookSdk:facebook')
     compile project(':lib:FlightLib')
