--- a/project/build.gradle
+++ b/project/build.gradle
@@ -9,9 +9,9 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: [
-        'activeandroid-20131111.jar',
-        'admsAppLibrary-3.0.5.jar',
-        'adxtag3.1.5.jar',
+            'activeandroid-20131111.jar',
+            'admsAppLibrary-3.0.5.jar',
+            'adxtag3.1.5.jar',
     ])
     compile project(':lib:FacebookSdk:facebook')
     compile project(':lib:FlightLib')
@@ -26,10 +26,13 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
 
     androidTestCompile fileTree('../lib/TestUtils/project/libs').include(
-        'robotium-solo-5.0.1.jar',
+            'robotium-solo-5.0.1.jar',
     )
     androidTestCompile 'com.jakewharton.espresso:espresso:1.1-r3'
     androidTestCompile 'com.squareup.spoon:spoon-client:1.1.1'
+    androidTestCompile('com.squareup.okhttp:mockwebserver:2.0.0') {
+        exclude group: 'com.squareup.okhttp'
+    }
 }
 
 android {
@@ -149,6 +152,7 @@ android {
         androidTest {
             java.srcDirs = ['unitTests/java']
             res.srcDirs = ['unitTests/res']
+            assets.srcDirs = ['unitTests/assets']
         }
 
         androidTestExpediaAutomation {
