Make roundtrip mock flight search date agnostic
OMG WHAT HAVE I DONE!?

--- a/project/unitTests/assets/MockResponses/api/flight/search/happy_roundtrip.json
+++ b/project/unitTests/assets/MockResponses/api/flight/search/happy_roundtrip.json
@@ -8,12 +8,12 @@
                     "airlineName": "American Airlines",
                     "arrivalAirportCode": "SFO",
                     "arrivalAirportLocation": "SFO",
-                    "arrivalTimeEpochSeconds": 1399753500,
-                    "arrivalTimeZoneOffsetSeconds": -25200,
+                    "arrivalTimeEpochSeconds": ${returnFlightLandingTimeEpochSeconds},
+                    "arrivalTimeZoneOffsetSeconds": ${tzOffsetSeconds},
                     "departureAirportCode": "DTW",
                     "departureAirportLocation": "DTW",
-                    "departureTimeEpochSeconds": 1399731000,
-                    "departureTimeZoneOffsetSeconds": -14400,
+                    "departureTimeEpochSeconds": ${returnFlightTakeoffTimeEpochSeconds},
+                    "departureTimeZoneOffsetSeconds": ${tzOffsetSeconds},
                     "distance": 2572,
                     "distanceUnits": "miles",
                     "equipmentCode": "32B",
@@ -33,12 +33,12 @@
                     "airlineName": "Delta",
                     "arrivalAirportCode": "DTW",
                     "arrivalAirportLocation": "DTW",
-                    "arrivalTimeEpochSeconds": 1399004520,
-                    "arrivalTimeZoneOffsetSeconds": -14400,
+                    "arrivalTimeEpochSeconds": ${departingFlightLandingTimeEpochSeconds},
+                    "arrivalTimeZoneOffsetSeconds": ${tzOffsetSeconds},
                     "departureAirportCode": "SFO",
                     "departureAirportLocation": "SFO",
-                    "departureTimeEpochSeconds": 1398988800,
-                    "departureTimeZoneOffsetSeconds": -25200,
+                    "departureTimeEpochSeconds": ${departingFlightTakeoffTimeEpochSeconds},
+                    "departureTimeZoneOffsetSeconds": ${tzOffsetSeconds},
                     "distance": 2572,
                     "distanceUnits": "miles",
                     "equipmentCode": "752",
