--- a/project/build.gradle
+++ b/project/build.gradle
@@ -15,11 +15,13 @@ dependencies {
     ])
     compile project(':lib:FacebookSdk:facebook')
     compile project(':lib:FlightLib')
-    compile project(':lib:google-play-services')
     compile project(':lib:svg-android:svgandroid')
     compile project(':lib:Utils')
     compile project(':lib:ShareEverywhere:shareeverywhere')
     compile project(':lib:AndroidTime')
+
+    compile "com.android.support:support-v4:${rootProject.ext.supportLibVersion}"
+    compile "com.google.android.gms:play-services:${rootProject.ext.googlePlayServicesVersion}"
 
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup:otto:1.3.4'
