--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -54,7 +54,7 @@
             android:value="13" />
         <meta-data
             android:name="AA_MODELS"
-            android:value="com.expedia.bookings.model.Search,com.expedia.bookings.model.DismissedItinButton,com.expedia.bookings.model.WidgetConfigurationState,com.expedia.bookings.notification.Notification" />
+            android:value="com.expedia.bookings.model.Search,com.expedia.bookings.model.DismissedItinButton,com.expedia.bookings.notification.Notification" />
 
         <!-- Google Maps -->
         <meta-data
